--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
-lang: "en"
+title: "Android Guidance"
+author: "Paniz Alipour"
+description: "This blog aims to provide all required information for android developers"
+lang: "fa"
 
 # Page settings
 permalink: /:title/          # see https://jekyllrb.com/docs/permalinks/
@@ -34,7 +34,7 @@ comments:                    # embed disqus or isso comments
 #  disqus: ""
 #  isso: ""
 
-plugins: 
+plugins:
  - jekyll-feed
  - jekyll-paginate
  - jekyll-default-layout
