--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Android Guidance"
+title: "آموزش فارسی اندروید"
 author: "Paniz Alipour"
 description: "This blog aims to provide all required information for android developers"
 lang: "fa"
